# shockwave

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  vercel.json
catalog/: README.md  agent.yaml  flow.yaml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOY_VERCEL.md  DEVPOST.md  DEVPOST_SUBMISSION.docx  DEVPOST_SUBMISSION.md  thumbnail.html
examples/: blast-is_test_path.html  blast-is_test_path.json  blast-is_test_path.md
examples/flask/: setupmethod.html  setupmethod.json  setupmethod.md
scripts/: build_static.py
shockwave/: __init__.py  blast_radius.py  ci_bot.py  cli.py  orbit_client.py  reach.py  report.py  risk.py  schema.py  stubs.py  testimpact.py  web.py
shockwave/web/: app.html  index.html
shockwave/web/static/: baked.js  site.js
shockwave/web/templates/: app.html  base.html  docs.html  features.html  home.html  how.html  surfaces.html
skills/orbit-reachability/: SKILL.md
skills/orbit-reachability/recipes/: inbound_callers_by_file.json  inbound_callers_by_ids.json  inbound_callers_by_name.json  outbound_dependencies_by_ids.json
skills/shockwave/: SKILL.md
skills/shockwave/recipes/: direct_callers.sql  resolve_seed.sql  transitive_radius.sql  untested_hotspots.sql
tests/: test_blast_radius.py  test_smoke.py
web-static/: app.html  docs.html  features.html  how.html  index.html  surfaces.html
web-static/static/: site.css
